--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.3.2"
+    "mongoose": "^7.3.2",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1"
   }
 }
