Added Face Recognition integration with web socket

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Backend/.env
 Backend/node_modules
 Daashboard_2.0/Dashboard/node_modules
 Backend/Python/TestVideo.avi
+Backend/Python/FaceRecognition/Train
