--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fast-csv": "^4.3.6",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "socket.io": "^4.7.1",
