Working counter with backend

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Backend/node_modules
 Daashboard_2.0/Dashboard/node_modules
 Backend/Python/PeopleCounter/TestVideo.avi
 Backend/Python/FaceRecognition/Train
+.DS_Store
