--- a/Daashboard_2.0/Dashboard/package.json
+++ b/Daashboard_2.0/Dashboard/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.11.0",
     "axios": "^1.4.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
