--- a/Daashboard_2.0/Dashboard/package.json
+++ b/Daashboard_2.0/Dashboard/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@react-oauth/google": "^0.11.0",
     "axios": "^1.4.0",
-    "d3": "^7.8.5",
+    "chart.js": "^4.3.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "socket.io-client": "^4.7.1"
