--- a/Daashboard_2.0/Dashboard/package.json
+++ b/Daashboard_2.0/Dashboard/package.json
@@ -11,16 +11,21 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.11.0",
+    "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "chart.js": "^4.3.2",
+    "datatables.net-dt": "^1.13.6",
+    "jquery": "^3.7.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
+    "react-table": "^7.8.0",
     "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
