--- a/Daashboard_2.0/Dashboard/package.json
+++ b/Daashboard_2.0/Dashboard/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^20.5.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-table": "^7.7.14",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
