--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fast-csv": "^4.3.6",
+    "loadash": "^1.0.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "socket.io": "^4.7.1",
